--- a/server/index.html
+++ b/server/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="description" content="" />
         <meta charset="utf-8">
         <title>Butterflies</title>
+        <meta name="description" content="An interactive visualization of 150.000 butterflies from the Natural History Museum in London, arranged by visual similarity using t-SNE and deep neural networks.">
+        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="">
 
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
             integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
@@ -14,7 +14,6 @@
             integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og=="
             crossorigin="">
         </script>
-        <link rel="shortcut icon" type="image/png" href="favicon.png"/>
     </head>
 
     <body>
