Improve scaling for non-horizontal thumbnai images

--- a/server/index.html
+++ b/server/index.html
@@ -42,8 +42,12 @@
                 font-size: 24px;
             }
 
-            .leaflet-popup-content img {
+            .leaflet-popup-content {
                 width: 450px;
+            }
+
+            .leaflet-popup-content img {
+                max-width: 450px;
                 min-height: 300px;
             }
 
