Fix tile file extension

--- a/server/index.html
+++ b/server/index.html
@@ -385,7 +385,7 @@
                 zoomControl: false
             });
 
-            L.tileLayer('tile/{z}/{x}/{y}.png', {
+            L.tileLayer('tile/{z}/{x}/{y}.jpg', {
                 minZoom: 5,
                 maxZoom: 16,
                 bounds: [[-1, -1], [1, 1]],
