Add support for HQ tiles

--- a/server/index.html
+++ b/server/index.html
@@ -428,7 +428,7 @@
                 zoomControl: false
             });
 
-            L.tileLayer('tile/{z}/{x}/{y}.jpg', {
+            L.tileLayer('tile{r}/{z}/{x}/{y}.jpg', {
                 minZoom: 5,
                 maxZoom: 17,
                 bounds: [[-1, -1], [1, 1]],
